--- a/templates/contact_form.html
+++ b/templates/contact_form.html
@@ -1,6 +1,6 @@
-<section style="padding-bottom: 4rem;">
+<section style="padding-bottom: 4rem; height: 100vh;">
   <div class="container d-flex justify-content-center align-items-center">
-    <div class="col-md-6">
+    <div class="col-md-8 col-lg-6 col-10">
       <form>
         <div class="mb-3">
           <label for="exampleInputEmail1" class="form-label text-white">Email address</label>
