--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,11 +1,11 @@
 <section style="background-color: lightgray; padding: 1rem 0.5rem 0.5rem 1rem;">
     <div class="container">
         <div class="row">
-            <div class="col-md-4">
+            <div class="col-md-4 footer-col-01">
                 <p>Innovotech | 2024</p>
             </div>
-            <div class="col-md-8" style="display: flex; justify-content: end;">
-                <ul style="display: flex; gap: 2rem;">
+            <div class="col-md-8 footer-col-02">
+                <ul>
                     <a href="{% url 'contact' %}" style="text-decoration: none; color: black;"><li style="list-style-type: none;">Contact Us</li></a>
                     <a href="{% url 'privacy' %}" style="text-decoration: none; color: black;"><li style="list-style-type: none;">Privacy Policy</li></a>
                     <a href="{% url 'terms' %}" style="text-decoration: none; color: black;"><li style="list-style-type: none;">Terms and Condition</li></a>
@@ -14,6 +14,7 @@
         </div>
     </div>
 </section>
+
 
 
 
