--- a/templates/privacy.html
+++ b/templates/privacy.html
@@ -2,7 +2,7 @@
 
 {% include "ad_sense_horizontal_banner.html" %}
 
-<section style="padding: 4rem 0rem;">
+<section style="padding: 4rem 0rem; height: 100vh;">
     <div class="container d-flex justify-content-center align-items-center">
         <div class="col-md-10">
             {{ privacy.privacy_text|safe }}
