--- a/templates/steps.html
+++ b/templates/steps.html
@@ -1,8 +1,8 @@
-<section style="display: flex;padding-top: 2rem;padding-bottom: 2rem;">
-    <div class="adsense col-md-3 d-flex justify-content-center align-items-center">
+<section class="steps">
+    <div class="adsense col-md-2 col-lg-3 d-flex justify-content-center align-items-center">
         <img src="{{ vertical_adsense.image_url }}" alt="" style="width: 200px;height: 600px;"> 
     </div>
-    <div class="col-md-6" style="display: flex;align-items: center;flex-direction: column;">
+    <div class="col-md-6 steps-col-01">
         <h1 class="text-white" style="text-align: center;">How Our Youtube Converter Works</h1>
         <ul style="padding-inline-start: 0;" class="text-white">
             <li style="list-style-type: none;">1. Copy the Youtube video link.</li>
@@ -17,19 +17,19 @@
         <hr style="width: 85%; padding-bottom: 3rem;color: white;">
         <div class="container">
             <div class="row">
-                <div class="col-md-6">
+                <div class="col-md-6 steps-col-02">
                     <h4 class="text-center text-white">Free Conversion</h4>
                     <p class="text-center text-white" style="padding-bottom: 5rem;">Our service is FREE for everyone. It allows anyone to use to convert and download YouTube videos.</p>
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-6 steps-col-02">
                     <h4 class="text-center text-white">Easily converting</h4>
                     <p class="text-center text-white" style="padding-bottom: 5rem;">Just paste the link or search to select the video to convert and get ready to download video to your device.</p>
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-6 steps-col-02">
                     <h4 class="text-center text-white">Full file format supported</h4>
                     <p class="text-center text-white" style="padding-bottom: 5rem;">Support all video and audio formats conversion. Easily convert YouTube videos to MP3, 3GP, MP4, FLV, AVI formats, etc.</p>
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-6 steps-col-02">
                     <h4 class="text-center text-white">High speed</h4>
                     <p class="text-center text-white" style="padding-bottom: 5rem;">Our YouTube Converter have the best speed for converting and downloading.</p>
                 </div>
@@ -37,7 +37,7 @@
         </div>
     </div>
     
-    <div class="adsense col-md-3 d-flex justify-content-center align-items-center">
+    <div class="adsense col-md-2 col-lg-3 d-flex justify-content-center align-items-center">
         <img src="{{ vertical_adsense.image_url }}" alt="" style="width: 200px;height: 600px;"> 
     </div>
     
