--- a/templates/header.html
+++ b/templates/header.html
@@ -15,15 +15,77 @@
 
     <!-- ========================= CSS here ========================= -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <style>
+        .footer-col-02 {
+            display: flex;
+            justify-content: end;
+        }
+        .steps {
+            display: flex;
+            padding-top: 2rem;
+            padding-bottom: 2rem;
+            justify-content: space-around;
+        }
+        .footer-col-02 ul {
+            display: flex; 
+            gap: 2rem;
+        }
+        .steps-col-01 {
+            display: flex;align-items: center;flex-direction: column;
+        }
+        .navbar-brand img {
+            width: 20%;
+        }
+        .steps-col-02 {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+        }
+        @media (max-width: 992px) {
+
+        }
+        @media (max-width: 768px) {
+            .footer-col-01 {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+            }
+            .footer-col-02 {
+                justify-content: center;
+            }
+            .steps {
+            display: block;
+            }
+            .steps-col-01 {
+                padding: 2rem;
+            }
+            .hero-text h1 {
+                font-size: 3rem;
+            }
+        }
+        @media (max-width: 576px) {
+            .footer-col-02 ul {
+                padding-inline-start: 0;
+                gap: 0.2rem;
+            }
+            .navbar-brand img {
+            width: 40%;
+            }
+            
+        }
+        
+    </style>
 
 </head>
+
 
 <body style="background: linear-gradient(to right, #220048, #00010d);">
     <nav class="navbar navbar-expand-lg" style="background: linear-gradient(to right, #220048, #00010d);border-bottom: 1px solid white;">
         <div class="container-fluid" style="display: flex; flex-direction: column;">
             <a class="navbar-brand" href="#" style="display: flex;justify-content: center; padding-bottom: 0rem;">
                 <!-- <img src="https://res.cloudinary.com/dtzqdukyq/image/upload/v1715383746/Untitled_design_bhixrr.png" alt="Bootstrap" width="20%"> -->
-                <img src="{{ header.image_url }}" alt="Bootstrap" width="20%">
+                <img src="{{ header.image_url }}" alt="Bootstrap">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
